tests/build/cases/widget_new/property_generic2.stderr
error[E0277]: the trait bound `{integer}: IntoVar<bool>` is not satisfied
   --> cases/widget_new/property_generic2.rs:6:23
    |
6   |         value::<bool> = 0;
    |         -----         ^ the trait `IntoVar<bool>` is not implemented for `{integer}`
    |         |
    |         required by a bound introduced by this call
    |
    = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `value_Args::<T>::__new__`
   --> $WORKSPACE/zero-ui/src/widgets/toggle_wgt.rs
    |
    |     pub fn value<T: VarValue + PartialEq>(child: impl UiNode, value: impl IntoVar<T>) -> impl UiNode {
    |                                                                           ^^^^^^^^^^ required by this bound in `value_Args::<T>::__new__`
