tests/build/cases/widget_new/property_generic2.rs
use zero_ui::prelude::*;

fn main() {
    let _err = toggle! {
        child = text("");
        value::<bool> = 0;
    };
}
